# data_forecasting_agent

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  codereviewfile.md  implementation_phases.md  plan.md  pyproject.toml  report.md  setup.cfg  sonar-project.properties  timeseries_agent_documentation.html
.github/: copilot-instructions.md  dependabot.yml  depndabot.yml
.github/workflows/: ci.yml
data_forecaster/: .env.example  .gitignore  README  test_visualization.py
docs/: api-auth.md  api-reference.md  deployment.md  local-dev.md  statistical_methodology_review.md  user-management-scripts.md
scripts/: build_containers.sh  diagnose_guard_rails.py
tests/: __init__.py  conftest.py  test_admin_phase2_source.py  test_airline_report_consistency.py  test_api_config_helpers.py  test_api_key_roles.py  test_backend_exceptions.py  test_compat_bootstrap.py  test_connection_error_redaction.py  test_data_cleaning.py  test_decision_loss.py  test_durable_results.py  test_file_storage_ownership.py  test_forecast_failure_states.py  test_forecast_fixtures.py  test_forecast_memory.py  test_forecast_performance.py  test_forecasting_metrics.py  test_frontend_db_init.py  test_frontend_job_heartbeat.py  test_frontend_production_config.py  test_job_cancellation.py  test_job_heartbeat.py  test_model_retry_consistency.py  test_pdf_service.py  test_per_user_job_list.py  test_pipeline_contract.py  test_preflight_frequency.py  test_report_identity.py  test_report_service.py  test_service_user_reconcile.py  test_statistical_soundness.py  test_user_managment_scripts.py
(+230 files in other folders)
